--- a/priv/style.css
+++ b/priv/style.css
@@ -1,3 +1,8 @@
 html {
-	background: #ccc;
+	background: #eee;
+	font: normal 16px "Helvetica Neue", Arial, Helvetica, sans-serif;
+}
+
+code {
+	background: #bbb;
 }
