--- a/priv/basic/style.css
+++ b/priv/basic/style.css
@@ -1,14 +1,261 @@
-* {
-	margin: 0;
-	padding: 0;
+html {
+		background: #fff; /* dark blue */
 }
 
-#rooms .rooms li {
+body {
+		font: normal 13px "Lucida Grande", "Lucida Sans Unicode", Geneva, sans-serif;
+		color: rgb(110,110,110);
+		line-height: 18px;
+}
+
+* {
+		margin: 0;
+		padding: 0;
+		text-decoration: none;
+}
+
+p, h3 {
+		margin: 0 0 20px 0;
+}
+
+h3 {
+		font-weight: bold;
+		font-size: 13px;
+		line-height: 16px;
+}
+
+a {
+		color: rgb(110,110,110);
+		text-decoration: underline;
+}
+
+a:hover {
+		color: rgb(80,80,80);
+}
+
+a:active {
+		color: rgb(110,110,110);
+}
+
+code {
+		font-family: Menlo, Consolas, Monaco, "Lucida Console", monospace;
+		color: rgb(160,160,160);
+}
+
+/* buttons */
+
+button {
+		border: none;
+		padding: 7px 9px;
+		font-size: 12px;
+		line-height: 12px;
+		font-family: Helvetica, sans-serif;
+		text-decoration: none;
+		border-radius: 4px;
+		cursor: pointer;
+}
+
+button.submit { /* blue */
+		color: rgba(250,250,250,0.92);
+		text-shadow: 0 -1px rgb(58,138,223);
+		background: rgb(70,150,223);
+		background: linear-gradient(top, rgb(95,175,230) 0%, rgb(50,130,215) 100%);
+		background: -webkit-linear-gradient(top, rgb(95,175,230) 0%, rgb(50,130,215) 100%);
+		box-shadow: inset 0 0 0 1px rgba(35,105,190,0.6), inset 0 2px 0 0 rgb(102,182,237), inset 2px 0 0 0 rgba(105,185,240,0.1), inset -2px 0 0 0 rgba(105,185,240,0.1), inset 0 -2px 0 0 rgba(105,185,240,0.1), 0 1px 2px rgba(0,0,0,0.08);
+}
+
+button.submit:hover {
+		color: rgba(255,255,255,0.92);
+		text-shadow: 0 -1px rgb(63,143,228);
+		background: rgb(75,155,228);
+		background: linear-gradient(top, rgb(95,175,230) 0%, rgb(50,130,215) 100%);
+		background: -webkit-linear-gradient(top, rgb(100,180,235) 0%, rgb(55,135,220) 100%);
+		box-shadow: inset 0 0 0 1px rgba(40,110,195,0.6), inset 0 2px 0 0 rgb(107,187,242), inset 2px 0 0 0 rgba(110,190,245,0.1), inset -2px 0 0 0 rgba(110,190,245,0.1), inset 0 -2px 0 0 rgba(110,190,245,0.1), 0 1px 2px rgba(0,0,0,0.08);
+}
+
+button.submit:active {
+		color: rgba(250,250,250,0.91);
+		text-shadow: 0 1px rgb(45,125,210);
+		background: rgb(60,140,213);
+		background: linear-gradient(top, rgb(60,140,215) 0%, rgb(80,160,220) 100%);
+		background: -webkit-linear-gradient(top, rgb(60,140,215) 0%, rgb(80,160,220) 100%);
+		box-shadow: inset 0 0 0 1px rgba(35,105,190,0.6), 0 1px 2px rgb(255,255,255), inset 0 0 rgba(35,105,190,0.4);
+}
+
+/* end buttons */
+
+/* input */
+
+input:focus, textarea:focus {
+		outline: none;
+}
+
+input {
+		padding: 4px 6px;
+		font-size: 13px;
+		line-height: 16px;
+		border-radius: 4px;
+		color: rgb(110,110,110);
+		background: #fff;
+		border: 1px solid rgb(192,192,192);
+		box-shadow: inset 0 1px 2px rgba(0,0,0,0.08);
+		-webkit-appearance: none;
+}
+
+input::input-placeholder, input::-webkit-input-placeholder {
+		color: rgb(160,160,160);
+}
+
+/* end input */
+
+/* setup */
+
+@-webkit-keyframes fade-in {
+
+		0% {
+				opacity: 0;
+		} 100% {
+				opacity: 1;
+		}
+
+}
+
+@keyframes fade-in {
+
+		0% {
+				opacity: 0;
+		} 100% {
+				opacity: 1;
+		}
+
+}
+
+.overlay {
+		z-index: 101;
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		background: rgba(0,0,0,0.1);
+		-webkit-animation: fade-in;
+		-webkit-animation-duration: 0.4s;
+		-webkit-animation-iteration-count: 1;
+		animation: fade-in;
+		animation-duration: 0.4s;
+		animation-iteration-count: 1;
+}
+
+@-webkit-keyframes fall-in {
+
+		0% {
+				margin-top: 0;
+				opacity: 0;
+		} 100% {
+				margin-top: 150px;
+				opacity: 1;
+		}
+
+}
+
+@keyframes fall-in {
+
+		0% {
+				margin-top: 0;
+				opacity: 0;
+		} 100% {
+				margin-top: 150px;
+				opacity: 1;
+		}
+
+}
+
+.overlay .box {
+	margin: 150px auto 0 auto;
+	width: 300px;
+	background: #fff;
+	padding: 13px;
+	border-radius: 4px;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.08);
+	border: 1px solid rgb(192,192,192);
+	-webkit-animation: fall-in;
+	-webkit-animation-duration: 0.4s;
+	-webkit-animation-iteration-count: 1;
+	animation: fall-in;
+	animation-duration: 0.4s;
+	animation-iteration-count: 1;
+}
+
+#username {
+	width: 100%;
+	margin-bottom: 13px;
+}
+
+#username.error {
+	background: rgba(255,50,0, 0.1);
+}
+
+#register .button-wrapper {
+	width: 100%;
+	text-align: right;
+}
+
+#register .message {
+	text-align: left;
+	display: inline;
+	margin-right: 13px;
+}
+
+/* end setup */
+
+/* global */
+
+#wrapper {
+	z-index: 100;
+	width: 100%;
+	height: 100%;
 	background: #fff;
 }
 
-#rooms .rooms li.active {
-	background: #00f;
+#rooms {
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 200px;
+	height: 100%;
+	border-right: 1px solid rgb(192,192,192);
+	box-shadow: 0 1px 2px rgba(0,0,0,0.08);
+	padding: 13px;
+	box-sizing: border-box;
+}
+
+#messages {
+	position: fixed;
+	top: 0;
+	left: 200px;
+	right: 200px;
+	bottom: 0;
+	width: auto;
+	height: 100%;
+}
+
+#users {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 200px;
+	height: 100%;
+	background: #ccc;
+}
+
+/* end global */
+
+/* rooms */
+
+#join {
+	width: 100%;
 }
 
 #messages .rooms ol {
